[package]
name = "tsinfo"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Information about UNIX timestamps"
readme = "README.md"
homepage = "https://github.com/ewpratten/tsinfo"
repository = "https://github.com/ewpratten/tsinfo"
license = "GPL-3.0"
keywords = ["timestamps", "cli"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
colored = "2.0"
chrono-humanize = "0.2"
num-traits = "0.2"